# urlcheck

./: Makefile  Pipfile  README.md  pyproject.toml
src/urlcheck/: urlcheck.py
