[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "URLCheck"
version = "0.5.3"
description = "Check URLs for GSB status and existence."
authors = [
	{name = "Landon Stewart", email = "landonstewart@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.5"
dependencies = [
	"pysafebrowsing",
	"requests",
	"iocextract",
	"tqdm",
]

[project.scripts]
urlcheck = "urlcheck.urlcheck:main"
